load(":version.bzl", "LLVM_MAJOR_MINOR", "LLVM_VERSION")

# Bindgen inputs for the proxy SDK build script. These re-export targets from the
# external @llvm_toolchain_llvm / @sysroot_linux_* repos through the MAIN repo,
# because the crate_universe-generated SDK repo can't see external repos by their
# apparent name — only the main repo via @@// (same reason //...:abi_h exists).
# The clang/libc++/sysroot header trees themselves arrive via the default LLVM cc
# toolchain; we only re-export libclang (not a toolchain input) and the sysroot
# marker here.

# The hermetic libclang soname chain (libclang.so -> .so.18.1 -> .so.18.1.8); all
# three names must be present so the symlinks resolve in the action sandbox.
# Pinned to LLVM_VERSION.
filegroup(
    name = "libclang",
    srcs = [
        "@llvm_toolchain_llvm//:lib/libclang.so",
        "@llvm_toolchain_llvm//:lib/libclang.so.{}".format(LLVM_MAJOR_MINOR),
        "@llvm_toolchain_llvm//:lib/libclang.so.{}".format(LLVM_VERSION),
    ],
    visibility = ["//visibility:public"],
)

# Just the libclang.so symlink — LIBCLANG_PATH ($(execpath ...)) needs one file.
filegroup(
    name = "libclang_so",
    srcs = ["@llvm_toolchain_llvm//:lib/libclang.so"],
    visibility = ["//visibility:public"],
)

# Marker file ($(execpath ...)) the build script three-parents to the sysroot
# root for --sysroot. The sysroot header tree itself is staged by the LLVM cc
# toolchain (exec is amd64); bindgen only parses, so the amd64 sysroot is fine
# regardless of exec arch.
filegroup(
    name = "sysroot_amd64_marker",
    srcs = ["@sysroot_linux_amd64//:usr/include/stdint.h"],
    visibility = ["//visibility:public"],
)
