load("@rules_helm//helm:defs.bzl", "helm_chart", "helm_lint_test", "helm_template_test")

# crds Helm chart (published as ghcr.io/bpalermo/aether/charts/crds).
#
# Standalone CRD chart so the CRDs can be installed/upgraded ahead of the
# controllers. See docs/proposals/015_mesh-config.md.
#
# Publish targets (GitHub Container Registry, OCI):
#   bazel run //charts/crds:crds.push           # chart
#   bazel run //charts/crds:crds.push_registry  # chart only
# Authenticate first via HELM_REGISTRY_USERNAME / HELM_REGISTRY_PASSWORD.
helm_chart(
    name = "crds",
    chart = "Chart.yaml",
    login_url = "ghcr.io",
    registry_url = "oci://ghcr.io/bpalermo/aether/charts",
    values = "values.yaml",
    visibility = ["//visibility:public"],
)

helm_lint_test(
    name = "crds_lint_test",
    chart = ":crds",
)

helm_template_test(
    name = "crds_template_test",
    chart = ":crds",
)
