load("@rules_helm//helm:defs.bzl", "helm_chart", "helm_lint_test", "helm_template_test")

# aether-registrar Helm chart.
#
# Publish targets (GitHub Container Registry, OCI):
#   bazel run //charts/registrar:registrar.push           # chart + image
#   bazel run //charts/registrar:registrar.push_registry  # chart only
# Authenticate first via HELM_REGISTRY_USERNAME / HELM_REGISTRY_PASSWORD.
helm_chart(
    name = "registrar",
    chart = "Chart.yaml",
    images = [
        "//registrar/cmd/registrar:image_push",
    ],
    login_url = "ghcr.io",
    registry_url = "oci://ghcr.io/bpalermo/aether/charts",
    values = "values.yaml",
    visibility = ["//visibility:public"],
)

helm_lint_test(
    name = "registrar_lint_test",
    chart = ":registrar",
)

helm_template_test(
    name = "registrar_template_test",
    chart = ":registrar",
)
