load("@rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "file",
    srcs = [
        "fadvise_linux.go",
        "fadvise_unspecified.go",
        "file.go",
    ],
    importpath = "github.com/bpalermo/aether/common/file",
    visibility = ["//visibility:public"],
    deps = [
        "@io_k8s_sigs_controller_runtime//:controller-runtime",
    ] + select({
        "@rules_go//go/platform:android": [
            "@org_golang_x_sys//unix",
        ],
        "@rules_go//go/platform:linux": [
            "@org_golang_x_sys//unix",
        ],
        "//conditions:default": [],
    }),
)

go_test(
    name = "file_test",
    srcs = ["file_test.go"],
    embed = [":file"],
)
