load("@rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "gammaproject",
    srcs = ["project.go"],
    importpath = "github.com/bpalermo/aether/common/gammaproject",
    visibility = ["//visibility:public"],
    deps = [
        "//api/aether/config/v1:config",
        "//api/aether/registry/v1:registry",
        "//common/apis/config/v1:config",
        "//common/extensionfilter",
        "//common/referencegrant",
        "//common/serviceref",
        "@io_k8s_sigs_gateway_api//apis/v1:apis",
        "@io_k8s_sigs_gateway_api//apis/v1beta1",
        "@org_golang_google_protobuf//types/known/durationpb",
    ],
)

go_test(
    name = "gammaproject_test",
    srcs = ["project_test.go"],
    embed = [":gammaproject"],
    deps = [
        "//api/aether/config/v1:config",
        "@com_github_stretchr_testify//assert",
        "@com_github_stretchr_testify//require",
        "@io_k8s_sigs_gateway_api//apis/v1:apis",
        "@org_golang_google_protobuf//types/known/anypb",
    ],
)
