load("@rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "log",
    srcs = [
        "fanout.go",
        "log.go",
        "named.go",
    ],
    importpath = "github.com/bpalermo/aether/common/log",
    visibility = ["//visibility:public"],
)

go_test(
    name = "log_test",
    srcs = ["log_test.go"],
    embed = [":log"],
    deps = [
        "@com_github_stretchr_testify//assert",
        "@com_github_stretchr_testify//require",
    ],
)
