load("@rules_go//go:def.bzl", "go_library")

go_library(
    name = "manager",
    srcs = [
        "config.go",
        "flags.go",
        "logging.go",
        "manager.go",
    ],
    importpath = "github.com/bpalermo/aether/common/manager",
    visibility = ["//visibility:public"],
    deps = [
        "//common/log",
        "//common/telemetry",
        "@com_github_go_logr_logr//:logr",
        "@com_github_spf13_cobra//:cobra",
        "@io_k8s_sigs_controller_runtime//:controller-runtime",
        "@io_k8s_sigs_controller_runtime//pkg/healthz",
    ],
)
