load("@rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "referencegrant",
    srcs = ["referencegrant.go"],
    importpath = "github.com/bpalermo/aether/common/referencegrant",
    visibility = ["//visibility:public"],
    deps = [
        "@io_k8s_sigs_gateway_api//apis/v1:apis",
        "@io_k8s_sigs_gateway_api//apis/v1beta1",
    ],
)

go_test(
    name = "referencegrant_test",
    srcs = ["referencegrant_test.go"],
    embed = [":referencegrant"],
    deps = [
        "@io_k8s_apimachinery//pkg/apis/meta/v1:meta",
        "@io_k8s_sigs_gateway_api//apis/v1:apis",
        "@io_k8s_sigs_gateway_api//apis/v1beta1",
    ],
)
