load("@rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "retry",
    srcs = ["retry.go"],
    importpath = "github.com/bpalermo/aether/common/retry",
    visibility = ["//visibility:public"],
    deps = [
        "@org_golang_google_grpc//codes",
        "@org_golang_google_grpc//status",
    ],
)

go_test(
    name = "retry_test",
    srcs = ["retry_test.go"],
    embed = [":retry"],
    deps = [
        "@com_github_stretchr_testify//assert",
        "@com_github_stretchr_testify//require",
        "@org_golang_google_grpc//codes",
        "@org_golang_google_grpc//status",
    ],
)
